--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,10 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v4  # Use v4 or the latest version
+      with:
+        node-version: 16  # Specify your desired Node.js version here
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11
+        python-version: 3.11  # Specify your desired Python version here
 
     - name: Install dependencies
       run: |
